# llama.cpp

./: CMakeLists.txt  Makefile
common/: arg.cpp  chat.cpp  chat.h  chat_templates.h
tools/: CMakeLists.txt
tools/main/: main.cpp
tools/wundot/: CMakeLists.txt  HowTo.md  core_processor.cpp  core_processor.h  init.cpp  init.h  input_handler.cpp  input_handler.h  llama_main.cpp  llama_main.h  llama_runtime.cpp  llama_runtime.h  llama_utils.h  llama_utils_test.cpp  main.cpp  signal_handler.h  utils.cpp
tools/wundot-binder/: CMakeLists.txt  lama_wrapper.h  llama_wrapper.cpp
tools/wundot-bridge/: CMakeLists.txt  HowTo.md  bridge.cpp  bridge.h  chat_utils.cpp  chat_utils.h  sampling.h  xsampling.h
tools/wundot-bridge/old/: bridge.cpp  bridge.h
tools/wundot-bridge/v0/: bridge.cpp.md  bridge.h.md
tools/wundot-bridge/v1/: bridge.cpp
tools/wundot-grpc-server/: CMakeLists.txt  HowTo.md  llama_engine.cpp  llama_engine.h  llama_service_impl.cpp  llama_service_impl.h  server.cpp
tools/wundot-grpc-server/proto/: llama_service.proto
tools/wundot/core/: app_context.cpp  app_context.h  chat_state.cpp  chat_state.h  generation_loop.cpp  generation_loop.h  llama_runtime.cpp  llama_runtime.h
tools/wundot/io/: session_io.cpp  session_io.h
tools/wundot/platform/: signal_handler.cpp  signal_handler.h
tools/wundotOld/: CMakeLists.txt  HowTo.md  README.md  core_processor.cpp  initializer.cpp  initializer.h  main.cpp  output_generator.cpp  output_generator.h  signal_handler.cpp  utils.cpp  utils.h
